<resources>
    <string name="app_name">App Media Escolar</string>
    <string name="action_sair">Sair</string>
    <string name="btn_1_bimestre">1° Bimestre</string>
    <string name="btn_2_bimestre">2° Bimestre</string>
    <string name="btn_3_bimestre">3° Bimestre</string>
    <string name="btn_4_bimestre">4° Bimestre</string>
    <string name="btn_resultado_final">Resultado Final</string>
    <string name="name_app">App Média Escolar</string>
    <string name="name_button_1B">CALCULAR</string>
    <string name="name_sobre">Sobre</string>
</resources>
