<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAppMediaEscolar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_app"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/bs1Bimestre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorButton"
                android:text="@string/btn_1_bimestre"
                android:textColor="@color/colorTextButton"
                app:bootstrapBrand="primary"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/bs2Bimestre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorButton"
                android:enabled="false"
                android:text="@string/btn_2_bimestre"
                android:textColor="@color/colorTextButton"
                app:bootstrapBrand="primary"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/bs3Bimestre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorButton"
                android:enabled="false"
                android:text="@string/btn_3_bimestre"
                android:textColor="@color/colorTextButton"
                app:bootstrapBrand="primary"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/bs4Bimestre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorButton"
                android:enabled="false"
                android:text="@string/btn_4_bimestre"
                android:textColor="@color/colorTextButton"
                app:bootstrapBrand="primary"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/bsResultadoFinal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorButton"
                android:enabled="false"
                android:text="@string/btn_resultado_final"
                android:textColor="@color/colorTextButton"
                app:bootstrapBrand="primary"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>